# Fastapi-todo

./: README.md
back-end/dailyDo-todos-app/: .env  pyproject.toml
back-end/dailyDo-todos-app/dailydo_todos_app/: main.py  settings.py
back-end/dailyDo-todos-app/tests/: test_main.py
